<resources>
    <string name="app_name">GD Project</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Options">Options</string>
    <string name="AreYouSure">Are you sure that you want to delete this task?</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="select_date">Select date</string>
    <string name="description">Description</string>
    <string name="url">URL</string>
    <string name="expire_date">Expire date</string>
    <string name="settings">Settings</string>
    <string name="sortascending">Sort Ascending</string>
    <string name="sortbydate">Sort By Date</string>
    <string name="default1">Default</string>
    <string name="export_db_to_json">Export DB to Json</string>
    <string name="import_db_from_json">Import DB from Json</string>
</resources>
