<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:text="@string/Options"
        android:textStyle="bold"

        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textSize="@dimen/gmd_textsize" />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit"
        android:background="@color/teal"
        android:paddingTop="10dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingEnd="5dp"
        android:textStyle="bold"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:textSize="@dimen/md_textsize"
        android:textColor="@color/textGray"
        android:text="@string/Edit"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:background="@color/red"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textStyle="bold"
        android:id="@+id/delete"
        android:paddingLeft="5dp"
        android:textSize="@dimen/md_textsize"
        android:textColor="@color/textGray"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/Delete"/>


</LinearLayout>